RESOLVED FIXED301551
[WebXR][GTK2] web-platform-tests/webxr/xrWebGLLayer_opaque_framebuffer.https.html fails
https://bugs.webkit.org/show_bug.cgi?id=301551
Summary [WebXR][GTK2] web-platform-tests/webxr/xrWebGLLayer_opaque_framebuffer.https....
Dan Glastonbury
Reported 2025-10-27 19:31:33 PDT
Harness Error (FAIL), message = Error: assert_equals: expected 36053 but got 36054 TIMEOUT Ensure that the framebuffer given by the WebGL layer is opaque for immersive - webgl Test timed out NOTRUN Ensure that the framebuffer given by the WebGL layer is opaque for immersive - webgl2 NOTRUN Ensure that the framebuffer given by the WebGL layer is opaque for non-immersive - webgl NOTRUN Ensure that the framebuffer given by the WebGL layer is opaque for non-immersive - webgl2 Harness Error (FAIL), message = Error: assert_equals: expected 36053 but got 36054 TIMEOUT Ensure that the framebuffer given by the WebGL layer is opaque for immersive - webgl Test timed out NOTRUN Ensure that the framebuffer given by the WebGL layer is opaque for immersive - webgl2 NOTRUN Ensure that the framebuffer given by the WebGL layer is opaque for non-immersive - webgl NOTRUN Ensure that the framebuffer given by the WebGL layer is opaque for non-immersive - webgl2
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-29 18:38:56 PDT
Dan Glastonbury
Comment 2 2025-10-29 18:47:04 PDT
EWS
Comment 3 2025-10-29 22:23:35 PDT
Committed 302332@main (c332cde05aa6): <https://commits.webkit.org/302332@main> Reviewed commits have been landed. Closing PR #53181 and removing active labels.
Fujii Hironori
Comment 4 2025-10-29 23:03:25 PDT
*** Bug 301494 has been marked as a duplicate of this bug. ***
Sergio Villar Senin
Comment 6 2025-11-04 01:13:30 PST
*** Bug 298955 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.