[WebXR] WebGLRenderingContextBase::makeXRCompatible doesn't request extensions https://bugs.webkit.org/show_bug.cgi?id=301551 rdar://163681512

Reviewed by Mike Wyrzykowski and Fujii Hironori.

WebGLRenderingContextBase::makeXRCompatible was not requesting required
extensions to support WebXROpaqueFramebuffer causing framebuffer creation
failure on GTK/WPE.

Enable tests marked previously as [ Failure ].

* LayoutTests/imported/w3c/web-platform-tests/webxr/xrWebGLLayer_opaque_framebuffer_stencil.https-expected.txt:
* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/visionos/imported/w3c/web-platform-tests/webxr/xrWebGLLayer_opaque_framebuffer_stencil.https-expected.txt: Copied from LayoutTests/imported/w3c/web-platform-tests/webxr/xrWebGLLayer_opaque_framebuffer_stencil.https-expected.txt.
* LayoutTests/platform/wpe/TestExpectations:
* LayoutTests/platform/wpe/imported/w3c/web-platform-tests/webxr/xrWebGLLayer_opaque_framebuffer.https-expected.txt: Removed.
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::makeXRCompatible):

Canonical link: https://commits.webkit.org/302332@main